--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://abdeljalilrahil.github.io/tenz-game", 
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prebuild": "echo 'Running pre-build checks...'" 
   },
   "dependencies": {
     "nanoid": "^5.0.9",
